--- a/style.css
+++ b/style.css
@@ -1,4 +1,70 @@
-.bg-first-grad{
-	/* Gradient for slanted background, buttons, and bottom splash. */
+
+/*  Wrapper */
+
+.wrapper {
+/* Color Definitions */
+
+/* 1. Gradient */
+/* 2. Wite Block */
+/* 3. Yellow Block */
+/* 4. White Block */
+
+/* Background Positioning */
 }
-#nav-link{}
+
+/* Top Splash */
+#top-content {
+	min-height: 70vh;
+}
+#top-content a {
+	text-shadow: 2px 2px 1px #333;
+}
+#nav-link {}
+.bg-btn-1{
+	background: linear-gradient(90deg, #B0F, #F0F);
+	border-radius: 7px;
+}
+
+/* Cards */
+
+
+/* Bottom Content */
+
+#bottom-text-block{
+	line-height: 3em;
+}
+
+/* Bottom Splash */
+#bottom-splash {
+	background: linear-gradient(
+		90deg,
+		#F0F,
+		#B0F
+	);
+	height: 30vh;
+}
+
+/* footer */
+footer div{
+	background-color: #000;
+}
+footer a {
+	font-size: 2pc;
+	text-decoration-line: none;
+	color: #fff;
+}
+footer a:hover {
+	text-decoration-line: none;
+	color: #ddd;
+}
+#footer-element-1, #footer-element-2{
+	margin: 0 5vw 0 5vw;
+}
+
+/* background: linear-gradient(90deg, #8C56B2, #c87cff); */
+.bg-first {
+	background-color: #c87cff;
+}
+.bg-second {
+	background-color: #7CFFC8;
+}
