--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /*  Wrapper */
 
 header{
@@ -54,7 +53,7 @@ header{
 	height: 60vh;
 }
 #cards-content .card-group{
-	/* top: 20%; */
+	top: 20%;
 }
 #cards-content .col-12 {
 	height: 60vh;
@@ -67,14 +66,14 @@ header{
 	background: hsla(0, 0%, 0%, 0);
 }
 .card-group .card-body{
-	/* position: relative; */
+	position: relative;
 	margin-top: 1rem;
 	background-color: #B0F;
 }
 .card-group .btn{
 	background-color: #F0C;
-	/* position: absolute; */
-	top: 90%;
+	position: absolute;
+	top: 90%;	
 }
 
 /* Bottom Content */
